--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^4.3.3",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "export-from-json": "^1.7.3",
+    "moment": "^2.29.4",
     "next": "13.4.13",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.2"
   }
 }
