--- a/package.json
+++ b/package.json
@@ -15,10 +15,19 @@
     "export-from-json": "^1.7.3",
     "moment": "^2.29.4",
     "next": "13.4.13",
+    "next-compose-plugins": "^2.2.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^15.1.0",
+    "postcss-preset-env": "^9.2.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2"
+  },
+  "devDependencies": {
+    "postcss": "^8.4.31",
+    "postcss-nested": "^6.0.1",
+    "postcss-nesting": "^12.0.1"
   }
 }
