--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postcss:watch": "postcss src/app/global.css --dir public --watch"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.16",
     "chart.js": "^4.3.3",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "export-from-json": "^1.7.3",
     "moment": "^2.29.4",
-    "next": "13.4.13",
+    "next": "^13.5.4",
     "next-compose-plugins": "^2.2.1",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-import": "^15.1.0",
     "postcss-preset-env": "^9.2.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -27,7 +27,9 @@
   },
   "devDependencies": {
     "postcss": "^8.4.31",
-    "postcss-nested": "^6.0.1",
-    "postcss-nesting": "^12.0.1"
+    "postcss-cli": "^10.1.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^15.1.0",
+    "postcss-preset-env": "^9.2.0"
   }
 }
