--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "postcss:watch": "postcss src/app/global.css --dir public --watch"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.13",
+    "@mui/material": "^5.14.13",
+    "@mui/x-date-pickers": "^6.16.2",
     "autoprefixer": "^10.4.16",
     "chart.js": "^4.3.3",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "export-from-json": "^1.7.3",
+    "material-react-table": "^2.0.0-beta.3",
     "moment": "^2.29.4",
     "next": "^13.5.4",
     "next-compose-plugins": "^2.2.1",
@@ -23,7 +29,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "use-memo": "^0.0.0"
   },
   "devDependencies": {
     "postcss": "^8.4.31",
