--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.29.4",
     "next": "^13.5.4",
     "next-compose-plugins": "^2.2.1",
+    "postcss-nested": "^6.0.1",
     "postcss-preset-env": "^9.2.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
